--- a/interpretation/RFM_vs_RFMV.ipynb
+++ b/interpretation/RFM_vs_RFMV.ipynb
@@ -15,9 +15,9 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "rfm = pd.read_csv('./../data/clustered/rfm.csv')\n",
-    "rfm['kmeans_cluster'] = rfm['kmeans_cluster'] + 1\n",
-    "rfm['kmeans_cluster'] = rfm['kmeans_cluster'].astype('category')\n",
+    "rfm = pd.read_csv(\"./../data/clustered/rfm.csv\")\n",
+    "rfm[\"kmeans_cluster\"] = rfm[\"kmeans_cluster\"] + 1\n",
+    "rfm[\"kmeans_cluster\"] = rfm[\"kmeans_cluster\"].astype(\"category\")\n",
     "rfm"
    ]
   },
@@ -27,9 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rfmv = pd.read_csv('./../data/clustered/rfmv.csv')\n",
-    "rfmv['kmeans_cluster'] = rfmv['kmeans_cluster'] + 1\n",
-    "rfmv['kmeans_cluster'] = rfmv['kmeans_cluster'].astype('category')\n",
+    "rfmv = pd.read_csv(\"./../data/clustered/rfmv.csv\")\n",
+    "rfmv[\"kmeans_cluster\"] = rfmv[\"kmeans_cluster\"] + 1\n",
+    "rfmv[\"kmeans_cluster\"] = rfmv[\"kmeans_cluster\"].astype(\"category\")\n",
     "\n",
     "rfmv"
    ]
@@ -40,7 +40,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import silhouette_score, calinski_harabasz_score, davies_bouldin_score\n",
+    "from sklearn.metrics import (\n",
+    "    silhouette_score,\n",
+    "    calinski_harabasz_score,\n",
+    "    davies_bouldin_score,\n",
+    ")\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.cluster import KMeans\n",
@@ -61,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = rfm['kmeans_cluster']\n",
+    "y = rfm[\"kmeans_cluster\"]\n",
     "for i in range(100):\n",
     "    X_train, X_test, y_train, y_test = train_test_split(\n",
     "        rfm, y, test_size=0.1, stratify=y\n",
@@ -69,18 +73,26 @@
     "\n",
     "    scaler = StandardScaler()\n",
     "\n",
-    "    scaled_customers = scaler.fit_transform(X_test[['recency', 'frequency', 'monetary']])\n",
+    "    scaled_customers = scaler.fit_transform(\n",
+    "        X_test[[\"recency\", \"frequency\", \"monetary\"]]\n",
+    "    )\n",
     "    kmeans = KMeans(n_clusters=5)\n",
     "    kmeans.fit(scaled_customers)\n",
     "    labels = kmeans.labels_\n",
-    " \n",
-    "    experiments.append({\n",
-    "        'model': 'RFM',\n",
-    "        'experiment_no': i,\n",
-    "        'silouhette_score': round(silhouette_score(scaled_customers, labels), 2),\n",
-    "        'calinski_harabasz_score': round(calinski_harabasz_score(scaled_customers, labels), 2),\n",
-    "        'davies_bouldin_score': round(davies_bouldin_score(scaled_customers, labels), 2)\n",
-    "    })"
+    "\n",
+    "    experiments.append(\n",
+    "        {\n",
+    "            \"model\": \"RFM\",\n",
+    "            \"experiment_no\": i,\n",
+    "            \"silouhette_score\": round(silhouette_score(scaled_customers, labels), 2),\n",
+    "            \"calinski_harabasz_score\": round(\n",
+    "                calinski_harabasz_score(scaled_customers, labels), 2\n",
+    "            ),\n",
+    "            \"davies_bouldin_score\": round(\n",
+    "                davies_bouldin_score(scaled_customers, labels), 2\n",
+    "            ),\n",
+    "        }\n",
+    "    )"
    ]
   },
   {
@@ -96,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = rfmv['kmeans_cluster']\n",
+    "y = rfmv[\"kmeans_cluster\"]\n",
     "for i in range(100):\n",
     "    X_train, X_test, y_train, y_test = train_test_split(\n",
     "        rfmv, y, test_size=0.1, stratify=y\n",
@@ -104,18 +116,26 @@
     "\n",
     "    scaler = StandardScaler()\n",
     "\n",
-    "    scaled_customers = scaler.fit_transform(X_test[['recency', 'frequency', 'monetary', 'variety']])\n",
+    "    scaled_customers = scaler.fit_transform(\n",
+    "        X_test[[\"recency\", \"frequency\", \"monetary\", \"variety\"]]\n",
+    "    )\n",
     "    kmeans = KMeans(n_clusters=4)\n",
     "    kmeans.fit(scaled_customers)\n",
     "    labels = kmeans.labels_\n",
-    " \n",
-    "    experiments.append({\n",
-    "        'model': 'RFMV',\n",
-    "        'experiment_no': i,\n",
-    "        'silouhette_score': round(silhouette_score(scaled_customers, labels), 2),\n",
-    "        'calinski_harabasz_score': round(calinski_harabasz_score(scaled_customers, labels), 2),\n",
-    "        'davies_bouldin_score': round(davies_bouldin_score(scaled_customers, labels), 2)\n",
-    "    })"
+    "\n",
+    "    experiments.append(\n",
+    "        {\n",
+    "            \"model\": \"RFMV\",\n",
+    "            \"experiment_no\": i,\n",
+    "            \"silouhette_score\": round(silhouette_score(scaled_customers, labels), 2),\n",
+    "            \"calinski_harabasz_score\": round(\n",
+    "                calinski_harabasz_score(scaled_customers, labels), 2\n",
+    "            ),\n",
+    "            \"davies_bouldin_score\": round(\n",
+    "                davies_bouldin_score(scaled_customers, labels), 2\n",
+    "            ),\n",
+    "        }\n",
+    "    )"
    ]
   },
   {
@@ -125,7 +145,7 @@
    "outputs": [],
    "source": [
     "# Track results\n",
-    "report = pd.DataFrame(experiments)\n"
+    "report = pd.DataFrame(experiments)"
    ]
   },
   {
@@ -171,15 +191,17 @@
     "import scipy.stats as st\n",
     "\n",
     "alpha = 0.01\n",
-    "k2, p = st.normaltest(report['silouhette_score'])\n",
+    "k2, p = st.normaltest(report[\"silouhette_score\"])\n",
     "\n",
-    "for var in ['silouhette_score', 'calinski_harabasz_score', 'davies_bouldin_score']:\n",
+    "for var in [\"silouhette_score\", \"calinski_harabasz_score\", \"davies_bouldin_score\"]:\n",
     "    k2, p = st.normaltest(report[var])\n",
-    "    \n",
-    "    if (p > alpha):\n",
+    "\n",
+    "    if p > alpha:\n",
     "        print(f\"The variable '{var}' follow the normal law. (p-value = {p:.4f})\")\n",
     "    else:\n",
-    "        print(f\"The variable '{var}' doesn't follow the normal law. (p-value = {p:.4f})\")\n"
+    "        print(\n",
+    "            f\"The variable '{var}' doesn't follow the normal law. (p-value = {p:.4f})\"\n",
+    "        )"
    ]
   },
   {
@@ -223,10 +245,10 @@
     }
    ],
    "source": [
-    "rfm = report[report.model == 'RFM']['silouhette_score']\n",
-    "rfmv = report[report.model == 'RFMV']['silouhette_score']\n",
+    "rfm = report[report.model == \"RFM\"][\"silouhette_score\"]\n",
+    "rfmv = report[report.model == \"RFMV\"][\"silouhette_score\"]\n",
     "\n",
-    "st.bartlett(rfm,rfmv)"
+    "st.bartlett(rfm, rfmv)"
    ]
   },
   {
@@ -278,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "report.to_csv('./../data/metrics/report.csv',index=False)"
+    "report.to_csv(\"./../data/metrics/report.csv\", index=False)"
    ]
   }
  ],
