--- a/interpretation/matrixes.ipynb
+++ b/interpretation/matrixes.ipynb
@@ -104,11 +104,16 @@
     }
    ],
    "source": [
-    "rfm = pd.read_csv('./../data/clustered/rfm.csv')\n",
-    "rfm['kmeans_cluster'] = rfm['kmeans_cluster'] + 1\n",
-    "rfm['kmeans_cluster'] = rfm['kmeans_cluster'].astype('category')\n",
+    "rfm = pd.read_csv(\"./../data/clustered/rfm.csv\")\n",
+    "rfm[\"kmeans_cluster\"] = rfm[\"kmeans_cluster\"] + 1\n",
+    "rfm[\"kmeans_cluster\"] = rfm[\"kmeans_cluster\"].astype(\"category\")\n",
     "\n",
-    "rfm_stats = rfm[['recency', 'frequency', 'monetary', 'kmeans_cluster']].groupby('kmeans_cluster').mean().reset_index()\n",
+    "rfm_stats = (\n",
+    "    rfm[[\"recency\", \"frequency\", \"monetary\", \"kmeans_cluster\"]]\n",
+    "    .groupby(\"kmeans_cluster\")\n",
+    "    .mean()\n",
+    "    .reset_index()\n",
+    ")\n",
     "\n",
     "rfm_stats"
    ]
@@ -197,11 +202,16 @@
     }
    ],
    "source": [
-    "rfmv = pd.read_csv('./../data/clustered/rfmv.csv')\n",
-    "rfmv['kmeans_cluster'] = rfmv['kmeans_cluster'] + 1\n",
-    "rfmv['kmeans_cluster'] = rfmv['kmeans_cluster'].astype('category')\n",
+    "rfmv = pd.read_csv(\"./../data/clustered/rfmv.csv\")\n",
+    "rfmv[\"kmeans_cluster\"] = rfmv[\"kmeans_cluster\"] + 1\n",
+    "rfmv[\"kmeans_cluster\"] = rfmv[\"kmeans_cluster\"].astype(\"category\")\n",
     "\n",
-    "rfmv_stats = rfmv[['recency', 'frequency', 'monetary', 'variety', 'kmeans_cluster']].groupby('kmeans_cluster').mean().reset_index()\n",
+    "rfmv_stats = (\n",
+    "    rfmv[[\"recency\", \"frequency\", \"monetary\", \"variety\", \"kmeans_cluster\"]]\n",
+    "    .groupby(\"kmeans_cluster\")\n",
+    "    .mean()\n",
+    "    .reset_index()\n",
+    ")\n",
     "\n",
     "rfmv_stats"
    ]
@@ -220,72 +230,70 @@
    "outputs": [],
    "source": [
     "def create_customer_matrix(df: pd.DataFrame):\n",
-    "    frequency_mean = df['frequency'].mean()\n",
-    "    monetary_mean = df['monetary'].mean()\n",
+    "    frequency_mean = df[\"frequency\"].mean()\n",
+    "    monetary_mean = df[\"monetary\"].mean()\n",
     "\n",
     "    fig = px.scatter(\n",
     "        df,\n",
-    "        x='frequency',\n",
-    "        y='monetary',\n",
-    "        title='Customer Value Matrix',\n",
-    "        color='kmeans_cluster',\n",
-    "        text=\"kmeans_cluster\"\n",
+    "        x=\"frequency\",\n",
+    "        y=\"monetary\",\n",
+    "        title=\"Customer Value Matrix\",\n",
+    "        color=\"kmeans_cluster\",\n",
+    "        text=\"kmeans_cluster\",\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    fig.update_traces(marker=dict(size=18))\n",
     "\n",
-    "\n",
-    "\n",
     "    fig.add_annotation(\n",
-    "        x = (0.4 * frequency_mean),\n",
-    "        y = (2.2 * monetary_mean),\n",
-    "        text = \"Spender\",\n",
-    "        showarrow = False,\n",
+    "        x=(0.4 * frequency_mean),\n",
+    "        y=(2.2 * monetary_mean),\n",
+    "        text=\"Spender\",\n",
+    "        showarrow=False,\n",
     "        yshift=10,\n",
     "        font=dict(\n",
     "            size=24,\n",
     "        ),\n",
-    "        opacity=0.7\n",
+    "        opacity=0.7,\n",
     "    )\n",
     "\n",
     "    fig.add_annotation(\n",
-    "        x = (2.2 * frequency_mean),\n",
-    "        y = (2.2 * monetary_mean),\n",
-    "        text = \"Best\",\n",
-    "        showarrow = False,\n",
+    "        x=(2.2 * frequency_mean),\n",
+    "        y=(2.2 * monetary_mean),\n",
+    "        text=\"Best\",\n",
+    "        showarrow=False,\n",
     "        yshift=10,\n",
     "        font=dict(\n",
     "            size=24,\n",
     "        ),\n",
-    "        opacity=0.7\n",
+    "        opacity=0.7,\n",
     "    )\n",
     "\n",
     "    fig.add_annotation(\n",
-    "        x = (0.4 * frequency_mean),\n",
-    "        y = (0.4 * monetary_mean),\n",
-    "        text = \"Uncertain\",\n",
-    "        showarrow = False,\n",
+    "        x=(0.4 * frequency_mean),\n",
+    "        y=(0.4 * monetary_mean),\n",
+    "        text=\"Uncertain\",\n",
+    "        showarrow=False,\n",
     "        yshift=10,\n",
     "        font=dict(\n",
     "            size=24,\n",
     "        ),\n",
-    "        opacity=0.7\n",
+    "        opacity=0.7,\n",
     "    )\n",
     "\n",
     "    fig.add_annotation(\n",
-    "        x = (2.2 * frequency_mean),\n",
-    "        y = (0.4 * monetary_mean),\n",
-    "        text = \"Frequent\",\n",
-    "        showarrow = False,\n",
+    "        x=(2.2 * frequency_mean),\n",
+    "        y=(0.4 * monetary_mean),\n",
+    "        text=\"Frequent\",\n",
+    "        showarrow=False,\n",
     "        yshift=10,\n",
     "        font=dict(\n",
     "            size=24,\n",
     "        ),\n",
-    "        opacity=0.7\n",
+    "        opacity=0.7,\n",
     "    )\n",
     "\n",
-    "    fig.add_vline(x= frequency_mean)\n",
-    "    fig.add_hline(y= monetary_mean)\n",
+    "    fig.add_vline(x=frequency_mean)\n",
+    "    fig.add_hline(y=monetary_mean)\n",
     "\n",
     "    fig.show()"
    ]
@@ -2403,72 +2411,70 @@
    "outputs": [],
    "source": [
     "def create_customer_product_depth_matrix(df: pd.DataFrame):\n",
-    "    variety_mean = df['variety'].mean()\n",
-    "    monetary_mean = df['monetary'].mean()\n",
+    "    variety_mean = df[\"variety\"].mean()\n",
+    "    monetary_mean = df[\"monetary\"].mean()\n",
     "\n",
     "    fig = px.scatter(\n",
     "        df,\n",
-    "        x='variety',\n",
-    "        y='monetary',\n",
-    "        title='Customer Product Depth Matrix',\n",
-    "        color='kmeans_cluster',\n",
-    "        text=\"kmeans_cluster\"\n",
+    "        x=\"variety\",\n",
+    "        y=\"monetary\",\n",
+    "        title=\"Customer Product Depth Matrix\",\n",
+    "        color=\"kmeans_cluster\",\n",
+    "        text=\"kmeans_cluster\",\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    fig.update_traces(marker=dict(size=18))\n",
     "\n",
-    "\n",
-    "\n",
     "    fig.add_annotation(\n",
-    "        x = (0.4 * variety_mean),\n",
-    "        y = (2.2 * monetary_mean),\n",
-    "        text = \"High-Spender Narrow\",\n",
-    "        showarrow = False,\n",
+    "        x=(0.4 * variety_mean),\n",
+    "        y=(2.2 * monetary_mean),\n",
+    "        text=\"High-Spender Narrow\",\n",
+    "        showarrow=False,\n",
     "        yshift=10,\n",
     "        font=dict(\n",
     "            size=24,\n",
     "        ),\n",
-    "        opacity=0.7\n",
+    "        opacity=0.7,\n",
     "    )\n",
     "\n",
     "    fig.add_annotation(\n",
-    "        x = (2.2 * variety_mean),\n",
-    "        y = (2.2 * monetary_mean),\n",
-    "        text = \"High-Spender Broad\",\n",
-    "        showarrow = False,\n",
+    "        x=(2.2 * variety_mean),\n",
+    "        y=(2.2 * monetary_mean),\n",
+    "        text=\"High-Spender Broad\",\n",
+    "        showarrow=False,\n",
     "        yshift=10,\n",
     "        font=dict(\n",
     "            size=24,\n",
     "        ),\n",
-    "        opacity=0.7\n",
+    "        opacity=0.7,\n",
     "    )\n",
     "\n",
     "    fig.add_annotation(\n",
-    "        x = (0.4 * variety_mean),\n",
-    "        y = (0.4 * monetary_mean),\n",
-    "        text = \"Low-Spender Narrow\",\n",
-    "        showarrow = False,\n",
+    "        x=(0.4 * variety_mean),\n",
+    "        y=(0.4 * monetary_mean),\n",
+    "        text=\"Low-Spender Narrow\",\n",
+    "        showarrow=False,\n",
     "        yshift=10,\n",
     "        font=dict(\n",
     "            size=24,\n",
     "        ),\n",
-    "        opacity=0.7\n",
+    "        opacity=0.7,\n",
     "    )\n",
     "\n",
     "    fig.add_annotation(\n",
-    "        x = (2.2 * variety_mean),\n",
-    "        y = (0.4 * monetary_mean),\n",
-    "        text = \"Low-Spender Broad\",\n",
-    "        showarrow = False,\n",
+    "        x=(2.2 * variety_mean),\n",
+    "        y=(0.4 * monetary_mean),\n",
+    "        text=\"Low-Spender Broad\",\n",
+    "        showarrow=False,\n",
     "        yshift=10,\n",
     "        font=dict(\n",
     "            size=24,\n",
     "        ),\n",
-    "        opacity=0.7\n",
+    "        opacity=0.7,\n",
     "    )\n",
     "\n",
-    "    fig.add_vline(x= variety_mean)\n",
-    "    fig.add_hline(y= monetary_mean)\n",
+    "    fig.add_vline(x=variety_mean)\n",
+    "    fig.add_hline(y=monetary_mean)\n",
     "\n",
     "    fig.show()"
    ]
