--- a/interpretation/RFM_vs_RFMV.ipynb
+++ b/interpretation/RFM_vs_RFMV.ipynb
@@ -1595,10 +1595,9 @@
     }
    ],
    "source": [
-    "\n",
     "import plotly.express as px\n",
     "\n",
-    "fig1 = px.histogram(report, x='silouhette_score', color='model')\n",
+    "fig1 = px.histogram(report, x=\"silouhette_score\", color=\"model\")\n",
     "fig1.show()"
    ]
   },
@@ -2713,7 +2712,7 @@
     }
    ],
    "source": [
-    "fig2 = px.histogram(report, x='calinski_harabasz_score', color='model')\n",
+    "fig2 = px.histogram(report, x=\"calinski_harabasz_score\", color=\"model\")\n",
     "fig2.show()"
    ]
   },
@@ -3828,7 +3827,7 @@
     }
    ],
    "source": [
-    "fig3 = px.histogram(report, x='davies_bouldin_score', color='model')\n",
+    "fig3 = px.histogram(report, x=\"davies_bouldin_score\", color=\"model\")\n",
     "fig3.show()"
    ]
   },
